fix dropdown positioning on IE

--- a/src/styles/components/mm/components/_header.scss
+++ b/src/styles/components/mm/components/_header.scss
@@ -533,6 +533,7 @@
       height: auto;
       flex-direction: column;
       top: 100%;
+      left: 0;
       border-bottom-left-radius: 0.2rem;
       border-bottom-right-radius: 0.2rem;
       z-index: 2;
